--- a/apps/react-vite/project.json
+++ b/apps/react-vite/project.json
@@ -72,6 +72,43 @@
       "options": {
         "buildTarget": "react-vite:build"
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/react-vite/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/react-vite",
+        "configDir": "apps/react-vite/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "react-vite:build-storybook",
+        "staticFilePath": "dist/storybook/react-vite"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "react-vite:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
