--- a/libs/rlib-rollup/project.json
+++ b/libs/rlib-rollup/project.json
@@ -45,6 +45,43 @@
           "codeCoverage": true
         }
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/rlib-rollup/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/rlib-rollup",
+        "configDir": "libs/rlib-rollup/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "rlib-rollup:build-storybook",
+        "staticFilePath": "dist/storybook/rlib-rollup"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "rlib-rollup:build-storybook:ci"
+        }
+      }
     }
   }
 }
