--- a/libs/rlib-vite/project.json
+++ b/libs/rlib-vite/project.json
@@ -35,6 +35,43 @@
         "passWithNoTests": true,
         "reportsDirectory": "../../coverage/libs/rlib-vite"
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/rlib-vite/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/rlib-vite",
+        "configDir": "libs/rlib-vite/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "rlib-vite:build-storybook",
+        "staticFilePath": "dist/storybook/rlib-vite"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "rlib-vite:build-storybook:ci"
+        }
+      }
     }
   }
 }
