--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@nx/rollup": "16.3.0-beta.5",
     "@nx/storybook": "16.3.0-beta.5",
     "@nx/vite": "16.3.0-beta.5",
+    "@nx/web": "16.3.0-beta.5",
     "@nx/workspace": "16.3.0-beta.5",
     "@rollup/plugin-url": "^7.0.0",
+    "@storybook/addon-essentials": "7.0.15",
+    "@storybook/core-server": "7.0.15",
+    "@storybook/react-vite": "7.0.15",
     "@svgr/rollup": "^6.1.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
