--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@nx/storybook": "16.3.0-beta.5",
     "@nx/vite": "16.3.0-beta.5",
     "@nx/web": "16.3.0-beta.5",
+    "@nx/webpack": "16.3.0-beta.5",
     "@nx/workspace": "16.3.0-beta.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "7.0.15",
     "@storybook/core-server": "7.0.15",
     "@storybook/react-vite": "7.0.15",
     "@svgr/rollup": "^6.1.2",
+    "@svgr/webpack": "^6.1.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@swc/jest": "0.2.20",
@@ -56,9 +59,11 @@
     "nx": "16.3.0-beta.5",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2",
+    "url-loader": "^4.1.1",
     "vite": "^4.3.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
