--- a/apps/react-webpack/project.json
+++ b/apps/react-webpack/project.json
@@ -90,6 +90,43 @@
           "codeCoverage": true
         }
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/react-webpack/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/react-webpack",
+        "configDir": "apps/react-webpack/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "react-webpack:build-storybook",
+        "staticFilePath": "dist/storybook/react-webpack"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "react-webpack:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
