--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "16.3.0-beta.5",
-    "@nx/eslint-plugin": "16.3.0-beta.5",
-    "@nx/jest": "16.3.0-beta.5",
-    "@nx/js": "16.3.0-beta.5",
-    "@nx/linter": "16.3.0-beta.5",
-    "@nx/react": "16.3.0-beta.5",
-    "@nx/rollup": "16.3.0-beta.5",
-    "@nx/storybook": "16.3.0-beta.5",
-    "@nx/vite": "16.3.0-beta.5",
-    "@nx/web": "16.3.0-beta.5",
-    "@nx/webpack": "16.3.0-beta.5",
-    "@nx/workspace": "16.3.0-beta.5",
+    "@nx/cypress": "16.4.0-beta.14",
+    "@nx/eslint-plugin": "16.4.0-beta.14",
+    "@nx/jest": "16.4.0-beta.14",
+    "@nx/js": "16.4.0-beta.14",
+    "@nx/linter": "16.4.0-beta.14",
+    "@nx/react": "16.4.0-beta.14",
+    "@nx/rollup": "16.4.0-beta.14",
+    "@nx/storybook": "16.4.0-beta.14",
+    "@nx/vite": "16.4.0-beta.14",
+    "@nx/web": "16.4.0-beta.14",
+    "@nx/webpack": "16.4.0-beta.14",
+    "@nx/workspace": "16.4.0-beta.14",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "7.0.15",
@@ -31,20 +31,20 @@
     "@storybook/react-vite": "7.0.15",
     "@storybook/react-webpack5": "7.0.15",
     "@svgr/rollup": "^6.1.2",
-    "@svgr/webpack": "^6.1.2",
+    "@svgr/webpack": "8.0.1",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/coverage-c8": "^0.31.0",
-    "@vitest/ui": "^0.31.0",
+    "@vitejs/plugin-react": "4.0.1",
+    "@vitest/coverage-c8": "0.32.2",
+    "@vitest/ui": "0.32.2",
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
@@ -56,19 +56,19 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "~20.0.3",
-    "nx": "16.3.0-beta.5",
-    "nx-cloud": "latest",
+    "jsdom": "22.1.0",
+    "nx": "16.4.0-beta.14",
+    "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2",
+    "typescript": "5.1.3",
     "url-loader": "^4.1.1",
-    "vite": "^4.3.4",
-    "vite-plugin-dts": "~1.7.1",
+    "vite": "4.3.9",
+    "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.31.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "0.32.2"
   }
 }
