--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "16.4.0-beta.14",
-    "@nx/eslint-plugin": "16.4.0-beta.14",
-    "@nx/jest": "16.4.0-beta.14",
-    "@nx/js": "16.4.0-beta.14",
-    "@nx/linter": "16.4.0-beta.14",
-    "@nx/react": "16.4.0-beta.14",
-    "@nx/rollup": "16.4.0-beta.14",
-    "@nx/storybook": "16.4.0-beta.14",
-    "@nx/vite": "16.4.0-beta.14",
-    "@nx/web": "16.4.0-beta.14",
-    "@nx/webpack": "16.4.0-beta.14",
-    "@nx/workspace": "16.4.0-beta.14",
+    "@nx/cypress": "17.0.0-katerina.10",
+    "@nx/eslint-plugin": "17.0.0-katerina.10",
+    "@nx/jest": "17.0.0-katerina.10",
+    "@nx/js": "17.0.0-katerina.10",
+    "@nx/linter": "17.0.0-katerina.10",
+    "@nx/react": "17.0.0-katerina.10",
+    "@nx/rollup": "17.0.0-katerina.10",
+    "@nx/storybook": "17.0.0-katerina.10",
+    "@nx/vite": "17.0.0-katerina.10",
+    "@nx/web": "17.0.0-katerina.10",
+    "@nx/webpack": "17.0.0-katerina.10",
+    "@nx/workspace": "17.0.0-katerina.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "7.0.15",
@@ -57,7 +57,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "22.1.0",
-    "nx": "16.4.0-beta.14",
+    "nx": "17.0.0-katerina.10",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
@@ -72,3 +72,4 @@
     "vitest": "0.32.2"
   }
 }
+
