--- a/libs/rlv2/project.json
+++ b/libs/rlv2/project.json
@@ -35,6 +35,43 @@
         "passWithNoTests": true,
         "reportsDirectory": "../../coverage/libs/rlv2"
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/rlv2/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/rlv2",
+        "configDir": "libs/rlv2/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "rlv2:build-storybook",
+        "staticFilePath": "dist/storybook/rlv2"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "rlv2:build-storybook:ci"
+        }
+      }
     }
   }
 }
